fix(product): align social media share buttons
align social media share buttons with even spaces and padding

closes #116030415

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -92,7 +92,7 @@
 }
 
 .shares {
-  margin-top: 3em;
+  padding-left: 2em;
 }
 
 .fa-facebook.product-page:hover {
